<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:title="@string/mapas"
        android:key="mapas"
        android:defaultValue="false" />

    <PreferenceCategory android:title="@string/medida">
        <ListPreference
            android:key="medida"
            android:title="@string/distancia"
            android:summary="@string/desc_distancia"
            android:entryValues="@array/valor_medidas"
            android:entries="@array/medidas"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/visualizacao">
        <CheckBoxPreference
            android:key="satelite"
            android:title="@string/satelite"
            android:defaultValue="true"
            android:summaryOn="Imagens ligadas"
            android:summaryOff="Imagens desligadas" />
    </PreferenceCategory>
</PreferenceScreen>